--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
 <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
 <body>
-<h1>Discover hidden places in the world around you
-</h1>
-
+<h1>Discover hidden places in the world around you</h1>
+<p><a class="cta" href="#">Download Excursion (Coming soon!)</a>
+</p>
+<video autoplay muted loop><source src="resources/excursion.mp4" type="video/mp4">
+</video>
+<h2>Your personal travel guide</h2>
+<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+<p>
+    <img src="resources/camp.jpeg">
+</p>
+<p>
+    <img src="resources/phone.png">
+</p>
+<h2>Coming Soon for iPhone and Android</h2>
+<p><a class="cta" href="#">Download Excursion (Coming soon!)</a>
+</p>
 
 </body>
-
+<footer>
+   <p>@ Excursion</p> 
+</footer>
 </html>
